# assignment-2-mcourteaux1

./: CMakeLists.txt  full-test.sh
.github/workflows/: github-actions.yml
assignment-autotest/: CMakeLists.txt
assignment-autotest/.github/workflows/: github-actions.yml
assignment-autotest/test/assignment2/: assignment-test.sh
assignments/assignment2/: cross-compile.txt
conf/: username.txt
examples/autotest-validate/: autotest-validate.c
finder-app/: Makefile  finder-test.sh  finder.sh  writer.c
student-test/assignment1/: Test_validate_username.c
